--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   charts_flutter: ^0.12.0
   flutter_bloc: ^9.1.0
   go_router: ^14.8.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.15
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
